28/03/09 [biopp-devel-forum:19]
* Now empirical substitution models can be properly loaded with non-homogeneous models.

17/03/09 [biopp-devel-forum:11]
* Bug fixed in PhylogeneticApplicationTools::optimizeParameters.
* Also fixed error in documentation of JC models.

19/02/09 [biopp-devel-forum:6]
* Method clone in abstract[Reversible]SubstitutionModel.

02/02/09 Julien Dutheil (tnx to Emmanuel Douzery!)
* Bug fixed in TreeTools::treeToParenthesis: no more seg fault if tree is
  empty.
* Progress bar in computeBootstrapValues.	

20/01/09 Julien Dutheil
* Added getBootstrapValue method in Node.
* New PropertyNotFoundException and property methods update.

05/01/09 Julien Dutheil
* Added Rivas and Eddy substitution model with gaps.
* Small bug fixed in Markov-modulated substitution models.

18/01/08 -*- Version 1.7.0 -*-

11/12/08 Julien Dutheil
* Bug fixed in BioNJ.

10/12/08 Celine Scornavacca & Julien Dutheil
* Bug fixed int Node::getName and NodeException: no more recursive call!

07/12/08 Julien Dutheil
* New getRootFrequenciesSet in SubstitutionModelSet.
* New getStatesFrequenciesSet in MarkovModulatedFrequenciesSet.

04/12/08 Julien Dutheil
* Added a bit more options in tree length computation.

17/11/08 Julien Dutheil
* DistanceEstimation now allows to change the precision in the branch length
  estimation (no longer fixed to 0.0001, although it is still the default
	value).

10/11/08 Julien Dutheil
* Bug fixed in HomogeneousSequenceSimulator, ancestral root frequencies are
  not necessarily equal now!

04/11/08 Julien Dutheil
* New Strand-Symmetric subtituion mode from Lobry 1995.
* Numerical issue solved in GTR.

20/10/08 Bastien Boussau
* Bug fixed in PhylogeneticApplicationTools: now can run protein with covarion
models.

10/10/08 Julien Dutheil
* Bug fixed in FrequenciesSet when testing sum for frequencies.

18/01/08 -*- Version 1.6.0 -*-

12/09/08 Julien Dutheil
* Ancestral sequence reconstruction debugged and now allow sampling from the